--- a/css/global.css
+++ b/css/global.css
@@ -13,7 +13,7 @@
     --error-color: #DC3545;
 }
 
-body.dark-mode {
+html.dark-mode body {
     --bg-color: #111827;
     --card-bg-color: #1A202C; 
     --input-bg-color: #111827;
