--- a/css/global.css
+++ b/css/global.css
@@ -169,6 +169,25 @@ button:disabled {
     cursor: not-allowed;
 }
 
+select {
+    /* Hacemos que se vea como un campo de texto normal */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    
+    /* Añadimos nuestra flecha personalizada (un SVG) como fondo */
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%236B7280'%3E%3Cpath d='M7 10l5 5 5-5z'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 0.75rem center;
+    background-size: 1.5em;
+    padding-right: 3rem; /* Damos espacio para que el texto no se ponga debajo de la flecha */
+}
+
+/* En modo oscuro, la flecha cambia de color automáticamente */
+html.dark-mode select {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%239CA3AF'%3E%3Cpath d='M7 10l5 5 5-5z'/%3E%3C/svg%3E");
+}
+
 /* --- 5. Barra de Navegación --- */
 .navbar {
     background-color: transparent;
