--- a/css/global.css
+++ b/css/global.css
@@ -275,7 +275,7 @@ body.nav-open .nav-links {
     background: transparent;
     border: none;
     cursor: pointer;
-    padding: 5px;
+    /* padding: 5px; */
     border-radius: 5px;
     transition: background-color 0.2s;
     display: flex;
